--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,10 @@ html {
   box-sizing: inherit;
 }
 
+*:focus {
+  outline: none;
+}
+
 body {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
@@ -126,15 +130,15 @@ img {
 }
 
 .link.current::after {
-content: '';
-position: absolute;
-width: 100%;
-height: 4px;
-left: 0;
-top: 44px;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  top: 44px;
 
-background: #2196F3;
-border-radius: 2px;
+  background: #2196f3;
+  border-radius: 2px;
 }
 
 .us {
@@ -142,19 +146,19 @@ border-radius: 2px;
   font-style: normal;
 }
 
-.mail-block:hover .us, 
-.mail-block:focus .us,
+.mail-block:hover .us,
 .mail-block:hover .contact-icon,
-.mail-block:focus .contact-icon {
+.mail-block:focus-within .us,
+.mail-block:focus-within .contact-icon {
   color: var(--accent-color);
   fill: var(--accent-color);
   transition: transform var(--duration) var(--timing-function);
 }
 
-.phone-block:hover .us, 
+.phone-block:hover .us,
 .phone-block:hover .contact-icon,
-.phone-block:focus .us,
-.phone-block:focus .contact-icon {
+.phone-block:focus-within .us,
+.phone-block:focus-within .contact-icon {
   color: var(--accent-color);
   fill: var(--accent-color);
   transition: transform var(--duration) var(--timing-function);
@@ -234,7 +238,7 @@ border-radius: 2px;
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../images/Header\ img.jpg);
+    url(../images/Header\img.jpg);
   background-color: rgba(47, 48, 58, 0.8);
   background-repeat: no-repeat;
   background-size: cover;
@@ -359,8 +363,8 @@ border-radius: 2px;
 .subtitle {
   position: absolute;
   bottom: 0;
-  right:0;
-  left:0;
+  right: 0;
+  left: 0;
 }
 
 /* team */
@@ -441,14 +445,14 @@ border-radius: 2px;
   margin-right: 10px;
 }
 
-.team-social:hover .social-link, 
-.team-social:focus .social-link,
+.team-social:hover .social-link,
+.team-social:focus-within .social-link,
 .team-social:hover .social-icon,
-.team-social:focus .social-link {
+.team-social:focus-within .social-icon {
   background-color: var(--accent-color);
   fill: #ffffff;
   transition: transform var(--duration) var(--timing-function);
-} 
+}
 
 /* clients */
 
@@ -475,12 +479,12 @@ border-radius: 2px;
 }
 
 .client:hover .client-icon,
-.client:focus .client-icon {
+.client:focus-within .client-icon {
   fill: var(--accent-color);
 }
 
 .client:hover .client-link,
-.client:focus .client-link {
+.client:focus-within .client-link {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -657,7 +661,6 @@ border-radius: 2px;
   padding: 20px 24px;
 }
 
-
 .example {
   display: block;
   text-decoration: none;
@@ -669,7 +672,7 @@ border-radius: 2px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06rem;
-  }
+}
 
 .example-type {
   color: var(--secondary-text-color);
@@ -685,16 +688,18 @@ border-radius: 2px;
   width: 100%;
   height: 100%;
   left: 0;
-  bottom:0;
-  transform:translateY(101%);
+  bottom: 0;
+  transform: translateY(101%);
   transition: transform var(--duration) var(--timing-function);
 }
- 
-.item:hover .example-text, .item:hover .item-content,
-.item:focus .example-text, .item:focus .item-content {
-  transform:translateY(0);
+
+.item:hover .example-text,
+.item:hover .item-content,
+.item:focus-within .example-text,
+.item:focus-within .item-content {
+  transform: translateY(0);
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-  0px 1px 1px rgba(0, 0, 0, 0.12);
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 .example-text {
   color: var(--title-accent-color);
@@ -703,7 +708,7 @@ border-radius: 2px;
   margin: 0;
   padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
- }
+}
 
 .join .title {
   margin-bottom: 20px;
